try to fix sidenav collapse.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -448,3 +448,12 @@ a.user-thumb-profile {
 li .thumbnail {
   width: 200px;
 }
+
+.sidenav-collapse.collapse {
+  height: auto !important;
+  overflow: visible !important;
+}
+
+.sidenav-collapse.collapse {
+  overflow: visible\9;
+}
